CB-30629 adding notification entitlement and notification event